src/objects/ffbc__Plan__c.object
<CustomObject>
    <customHelpPage>ffbc__planhelp</customHelpPage>
    <description>Contains the products and price plans that you can create a contract from.</description>
    <fields>
        <fullName>ffbc__AnnualValue__c</fullName>
        <description>Value of the plan over 365 days.</description>
        <formula>IF(!ffbc__IsContinuous__c &amp;&amp; 365 &gt;= ffbc__NumberOfTerms__c * ffbc__Term__r.ffbc__EstimatedDaysPerTerm__c,
                ffbc__TermValue__c * ffbc__NumberOfTerms__c,
                (365 * ffbc__TermValue__c) / ffbc__Term__r.ffbc__EstimatedDaysPerTerm__c
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of the plan over 365 days.</inlineHelpText>
        <label>Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated company.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Related Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the plan.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__EndDate__c</fullName>
        <description>Date on which the plan expires and is no longer available to customers.</description>
        <label>Available To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__IsContinuous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the plan continues indefinitely.</description>
        <inlineHelpText>Indicates whether the plan continues indefinitely.</inlineHelpText>
        <label>Continuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__NumberOfTerms__c</fullName>
        <description>Number of Terms to be applied.</description>
        <label>Number of Terms</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__OneOffValue__c</fullName>
        <description>Total value of the plan line items with the Billing Type One-off.</description>
        <inlineHelpText>Total value of the plan line items with the Billing Type One-off.</inlineHelpText>
        <label>One-off Value</label>
        <summarizedField>ffbc__PlanLineItem__c.ffbc__SalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>ffbc__PlanLineItem__c.ffbc__BillingType__c</field>
            <operation>equals</operation>
            <value>One-off</value>
        </summaryFilterItems>
        <summaryForeignKey>ffbc__PlanLineItem__c.ffbc__Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbc__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date on which the plan is available to customers. The default value is today.</description>
        <label>Available From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__Status__c</fullName>
        <description>Status of the plan. This can be Draft, Active or Expired.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__TermValue__c</fullName>
        <description>Total value of one term. This includes plan line items where the Billing Type is not specified or a recurring Billing Type is specified.</description>
        <inlineHelpText>Total value of one term. This includes plan line items where the Billing Type is not specified or a recurring Billing Type is specified.</inlineHelpText>
        <label>Term Value</label>
        <summarizedField>ffbc__PlanLineItem__c.ffbc__SalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>ffbc__PlanLineItem__c.ffbc__IsRecurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ffbc__PlanLineItem__c.ffbc__Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbc__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit of time used to determine the duration of the plan. You can enter Week, Month, Year or Continuous.</description>
        <label>Term</label>
        <referenceTo>ffbc__SoftDate__c</referenceTo>
        <relationshipLabel>Related Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__TotalValue__c</fullName>
        <description>Total value of all terms if the plan is not continuous. This is calculated by multiplying the Term Value by the Number of Terms then adding the One-off Value.</description>
        <formula>IF( ffbc__IsContinuous__c , null, (ffbc__TermValue__c * ffbc__NumberOfTerms__c) + ffbc__OneOffValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of all terms if the plan is not continuous. This is calculated by multiplying the Term Value by the Number of Terms then adding the One-off Value.</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__Status__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__TermValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>